--- a/web_project_3-main/pages/index.css
+++ b/web_project_3-main/pages/index.css
@@ -1,4 +1,5 @@
 @import url("../vendor/normalize.css");
+@import url("../vendor/fonts/fonts.css");
 @import url("../block/page.css");
 @import url("../block/photo-grid.css");
 @import url("../block/places.css");
