--- a/web_project_3-main/block/introduction.css
+++ b/web_project_3-main/block/introduction.css
@@ -43,12 +43,26 @@
 }
 
 @media screen and (max-width: 550px) {
-  .introduction {
-    margin: 88px auto 0;
-    max-width: 100vw;
-  }
-
   .introduction__title {
     font-size: 32px;
+    line-height: 50px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .introduction {
+    margin-top: 64px;
+    margin-right: 16px;
+    margin-left: 16px;
+    margin-bottom: 90px;
+  }
+  .introduction__title {
+    font-size: 32px;
+    line-height: 35px;
+  }
+
+  .introduction__text {
+    font-size: 24px;
+    line-height: 30px;
   }
 }
