--- a/web_project_3-main/block/page.css
+++ b/web_project_3-main/block/page.css
@@ -9,21 +9,19 @@
 }
 
 .page__content {
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   color: #fff;
 }
 
 @media screen and (max-width: 920px) {
   .page {
-    max-height: 7382px;
     max-width: 100vw;
   }
 }
 
 @media screen and (max-width: 550px) {
   .page {
-    max-height: 9626px;
     margin: 0px;
     width: 100vw;
   }
