--- a/pages/index.css
+++ b/pages/index.css
@@ -1,9 +1,9 @@
 @import url("../vendor/normalize.css");
+@import url("../vendor/fonts/fonts.css");
 @import url("../block/page.css");
 @import url("../block/photo-grid.css");
 @import url("../block/places.css");
 @import url("../block/cover.css");
-@import url("../block/covers.css");
 @import url("../block/header.css");
 @import url("../block/lead.css");
 @import url("../block/introduction.css");
