--- a/block/cover.css
+++ b/block/cover.css
@@ -52,8 +52,10 @@
 }
 
 .cover__button {
-  margin: 32px auto 0;
-  width: 137px;
+  max-width: 137px;
+  z-index: 2;
+  margin: 32px 0 0;
+  align-self: center;
 }
 
 @media screen and (max-width: 1000px) {
