--- a/block/page.css
+++ b/block/page.css
@@ -5,24 +5,23 @@
   min-width: 320px;
   max-width: 1280px;
   margin: 0 auto;
+  font-family: "Inter", sans-serif;
 }
 
 .page__content {
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   color: #fff;
 }
 
 @media screen and (max-width: 920px) {
   .page {
-    max-height: 7382px;
     max-width: 100vw;
   }
 }
 
 @media screen and (max-width: 550px) {
   .page {
-    max-height: 9626px;
     margin: 0px;
     width: 100vw;
   }
