--- a/web_project_3-main/block/footer.css
+++ b/web_project_3-main/block/footer.css
@@ -10,14 +10,16 @@
   line-height: 1.14;
 }
 
-@media screen and (max-width: 940px) {
-  .footer {
+@media screen and (max-width: 768px) {
+  .footer__copyright {
     margin-top: 88px;
   }
 }
-@media screen and (max-width: 530px) {
-  .footer {
+
+@media screen and (max-width: 320px) {
+  .footer__copyright {
     margin-top: 64px;
-    line-height: 1;
+    font-size: 14px;
+    line-height: 14px;
   }
 }
