--- a/web_project_3-main/block/introduction.css
+++ b/web_project_3-main/block/introduction.css
@@ -55,6 +55,7 @@
     margin-right: 16px;
     margin-left: 16px;
     margin-bottom: 90px;
+    max-width: 288px;
   }
   .introduction__title {
     font-size: 32px;
@@ -64,5 +65,6 @@
   .introduction__text {
     font-size: 24px;
     line-height: 30px;
+    /* or 125% */
   }
 }
