--- a/web_project_3-main/block/photo-grid.css
+++ b/web_project_3-main/block/photo-grid.css
@@ -2,7 +2,7 @@
   margin: 118px 48px 0px;
 }
 
-@media screen and (max-width: 319px) {
+@media screen and (max-width: 320px) {
   .photo-grid {
     margin: 90px 16px 0;
   }
@@ -11,9 +11,9 @@
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
   .photo-grid {
-    margin: 90px 24px 0;
+    margin: 0 0 88px 0;
   }
   .photo-grid__list {
     max-width: 720px;
