--- a/web_project_3-main/block/lead.css
+++ b/web_project_3-main/block/lead.css
@@ -27,6 +27,7 @@
   filter: grayscale(100%);
   display: block;
   max-width: 100%;
+  margin-bottom: 0;
 }
 
 @media screen and (max-width: 768px) {
@@ -58,9 +59,5 @@
     font-size: 16px;
     line-height: 1.25;
     margin-bottom: 40px;
-  }
-
-  .lead__image {
-    margin-bottom: 0px;
   }
 }
