--- a/web_project_3-main/block/lead.css
+++ b/web_project_3-main/block/lead.css
@@ -24,6 +24,10 @@
   text-align: center;
 }
 
+.lead__image {
+  width: 100%;
+}
+
 @media screen and (max-width: 768px) {
   .lead__title {
     margin: 90px 24px 32px;
