--- a/web_project_3-main/block/cover.css
+++ b/web_project_3-main/block/cover.css
@@ -58,7 +58,7 @@
   align-self: center;
 }
 
-@media screen and (max-width: 560px) {
+@media screen and (max-width: 768px) {
   .cover__subtitle {
     font-size: 16px;
     line-height: 18px;
@@ -73,7 +73,7 @@
 
 @media screen and (max-width: 320px) {
   .cover__title {
-    margin: 46px auto 16px;
+    margin: 46px auto 0;
     font-size: 32px;
     line-height: 35px;
   }
@@ -88,10 +88,13 @@
   .cover {
     min-height: 254px;
     margin-top: 64px;
-    margin-bottom: 0;
   }
 
   .cover__button {
+    margin-top: 16px;
+  }
+
+  .cover__subtitle:first-of-type {
     margin-top: 16px;
   }
 }
