--- a/web_project_3-main/block/header.css
+++ b/web_project_3-main/block/header.css
@@ -1,7 +1,7 @@
 .header {
   display: flex;
   justify-content: center;
-  padding: 34px;
+  padding-bottom: 0;
 }
 
 .header__logo {
@@ -12,7 +12,7 @@
 
 @media screen and (max-width: 320px) {
   .header__logo {
-    margin: 20px auto;
+    margin: 20px auto 0px;
     max-width: 200px;
     max-height: 51.85px;
   }
