--- a/web_project_3-main/block/introduction.css
+++ b/web_project_3-main/block/introduction.css
@@ -42,10 +42,13 @@
   }
 }
 
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 768px) {
   .introduction__title {
     font-size: 32px;
     line-height: 50px;
+  }
+  .introduction__content {
+    margin-bottom: 90px;
   }
 }
 
@@ -63,7 +66,6 @@
   }
 
   .introduction__text {
-    font-size: 24px;
     line-height: 30px;
     /* or 125% */
   }
