--- a/web_project_3-main/block/photo-grid.css
+++ b/web_project_3-main/block/photo-grid.css
@@ -4,7 +4,8 @@
 
 @media screen and (max-width: 320px) {
   .photo-grid {
-    margin: 90px 16px 0;
+    margin: 0px 16px 0 16px;
+    padding-top: 0px;
   }
   .photo-grid__list {
     gap: 12px;
@@ -13,7 +14,7 @@
 
 @media screen and (max-width: 768px) {
   .photo-grid {
-    margin: 0 0 88px 0;
+    margin: 0 24px 88px 24px;
   }
   .photo-grid__list {
     max-width: 720px;
