--- a/block/footer.css
+++ b/block/footer.css
@@ -1,23 +1,25 @@
 .footer {
   align-items: center;
   text-align: center;
-  margin: 92px auto 24px;
+  margin: 0 auto 24px;
 }
 
 .footer__copyright {
-  margin: 0;
+  margin-top: 92px;
   font-size: 14px;
   line-height: 1.14;
 }
 
-@media screen and (max-width: 940px) {
-  .footer {
+@media screen and (max-width: 768px) {
+  .footer__copyright {
     margin-top: 88px;
   }
 }
-@media screen and (max-width: 530px) {
-  .footer {
+
+@media screen and (max-width: 320px) {
+  .footer__copyright {
+    font-size: 14px;
+    line-height: 14px;
     margin-top: 64px;
-    line-height: 1;
   }
 }
