--- a/block/cover.css
+++ b/block/cover.css
@@ -54,38 +54,47 @@
 .cover__button {
   max-width: 137px;
   z-index: 2;
-  margin: 32px 0 0;
+  margin: 45px 0 0;
   align-self: center;
 }
 
-@media screen and (max-width: 1000px) {
-  .cover {
-    max-width: 100vw;
-  }
-}
 @media screen and (max-width: 768px) {
-  .cover {
-    margin: 92px 0 0;
+  .cover__subtitle {
+    font-size: 16px;
+    line-height: 18px;
+    max-width: 250px;
+    margin: 0 auto;
+  }
+
+  .cover__button {
+    margin-top: 24px;
   }
 }
 
-@media screen and (max-width: 500px) {
-  .cover {
-    margin-top: 64px;
-    min-height: 254px;
-  }
+@media screen and (max-width: 320px) {
   .cover__title {
+    margin: 46px auto 0;
     font-size: 32px;
-    line-height: 1.09;
+    line-height: 35px;
   }
-  .cover__text {
+
+  .cover__subtitle {
     font-size: 14px;
-    line-height: 1.14;
+    line-height: 16px;
+    max-width: 220px;
+    margin: 0 auto;
   }
-  .cover__text:first-of-type {
-    margin: 16px 0 0;
+
+  .cover {
+    min-height: 254px;
+    margin-top: 64px;
   }
-  .cover__link {
-    margin: 16px 0 0;
+
+  .cover__button {
+    margin-top: 16px;
+  }
+
+  .cover__subtitle:first-of-type {
+    margin-top: 16px;
   }
 }
