--- a/block/introduction.css
+++ b/block/introduction.css
@@ -42,10 +42,13 @@
   }
 }
 
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 768px) {
   .introduction__title {
     font-size: 32px;
     line-height: 50px;
+  }
+  .introduction__content {
+    margin-bottom: 90px;
   }
 }
 
@@ -55,6 +58,7 @@
     margin-right: 16px;
     margin-left: 16px;
     margin-bottom: 90px;
+    max-width: 288px;
   }
   .introduction__title {
     font-size: 32px;
@@ -62,7 +66,7 @@
   }
 
   .introduction__text {
-    font-size: 24px;
     line-height: 30px;
+    /* or 125% */
   }
 }
