--- a/block/lead.css
+++ b/block/lead.css
@@ -3,80 +3,58 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  margin: 91px 148px 92px;
   padding: 0;
+  filter: grayscale(100%);
 }
-
 .lead__title {
-  text-align: center;
-  font-weight: 900;
   font-size: 96px;
+  font-weight: 900;
   line-height: 100px;
-  margin: 0px;
   max-width: 793px;
-  padding-bottom: 32px;
+  margin: 91px auto 32px;
+  text-align: center;
 }
 
 .lead__subtitle {
-  text-align: center;
-  padding-bottom: 64px;
-  max-width: 720px;
-  font-weight: 400;
   font-size: 30px;
+  font-weight: 400;
   line-height: 36px;
-  margin: 0;
-}
-
-.lead__image {
-  filter: grayscale(100%);
-}
-
-@media screen and (max-width: 1000px) {
-  .lead__title {
-    margin: 0px 24px;
-  }
-  .lead__subtitle {
-    margin: 0px 24px;
-  }
-}
-
-@media screen and (max-width: 550px) {
-  .lead {
-    padding: 0px;
-    max-width: 100vw;
-  }
-  .lead__title {
-    font-weight: 900;
-    font-size: 40px;
-    line-height: 44px;
-    padding-bottom: 16px;
-  }
-
-  .lead__subtitle {
-    font-size: 16px;
-    line-height: 20px;
-    padding: 0px;
-    max-width: 288px;
-    text-align: center;
-  }
+  max-width: 720px;
+  margin: 0 auto 64px;
+  text-align: center;
 }
 
 .lead__image {
   width: 100%;
 }
 
-@media screen and (max-width: 1000px) {
-  .lead {
-    margin: 0px;
+@media screen and (max-width: 768px) {
+  .lead__title {
+    margin: 90px 24px 32px;
   }
-  .lead__image {
-    object-fit: cover;
+  .lead__subtitle {
+    max-width: calc(100% - (24px * 2));
+    margin-bottom: 36px;
   }
 }
 
-@media screen and (max-width: 550px) {
-  .lead__image {
-    margin-top: 40px;
-    width: 100vw;
+@media screen and (max-width: 560px) {
+  .lead__title {
+    font-size: 50px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .lead__title {
+    font-size: 40px;
+    line-height: 44px;
+    margin-top: 50px;
+    margin-bottom: 16px;
+  }
+  .lead__subtitle {
+    max-width: calc(100% - (16px * 2));
+    font-size: 16px;
+    line-height: 1.25;
+    margin-bottom: 40px;
   }
 }
