--- a/block/photo-grid.css
+++ b/block/photo-grid.css
@@ -2,18 +2,19 @@
   margin: 118px 48px 0px;
 }
 
-@media screen and (max-width: 319px) {
+@media screen and (max-width: 320px) {
   .photo-grid {
-    margin: 90px 16px 0;
+    margin: 0px 16px 0 16px;
+    padding-top: 0px;
   }
   .photo-grid__list {
     gap: 12px;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
   .photo-grid {
-    margin: 90px 24px 0;
+    margin: 0 24px 88px 24px;
   }
   .photo-grid__list {
     max-width: 720px;
