--- a/block/places.css
+++ b/block/places.css
@@ -7,7 +7,7 @@
   display: grid;
   grid-template-columns: 460px 1fr;
   grid-template-rows: auto 460px auto;
-  grid-gap: 48px 35px;
+  grid-gap: 48px 40px;
   grid-template-areas:
     "title artist"
     "image description"
@@ -20,11 +20,13 @@
 }
 
 .places__title {
-  grid-area: title;
-  font-weight: 900;
   font-size: 72px;
-  line-height: 1.06;
-  margin: 0px;
+  line-height: 76px;
+  font-weight: 900;
+  max-width: 460px;
+  grid-area: title;
+  margin: 0;
+  max-height: 152px;
 }
 
 .places__artist {
@@ -60,6 +62,7 @@
   font-size: 18px;
   line-height: 1.63;
   max-width: 484px;
+  justify-content: center;
 }
 
 .places__description {
@@ -75,7 +78,7 @@
   width: 248px;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 768px) {
   .places {
     margin: 88px 24px 0;
   }
@@ -95,10 +98,13 @@
   }
   .places__title {
     font-size: 42px;
-    line-height: 1.06;
+    line-height: 1.1;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
   }
 }
-@media screen and (max-width: 634px) {
+@media screen and (max-width: 560px) {
   .places {
     margin: 62px 0 0;
   }
@@ -126,13 +132,15 @@
     padding: 0 16px 0;
   }
 }
-@media screen and (max-width: 466px) {
+@media screen and (max-width: 320px) {
   .places__title {
     font-size: 32px;
     line-height: 1.09;
   }
   .places__button {
-    width: 288px;
-    margin-left: calc((100% - 288px) / 2);
+    margin-bottom: 0;
+    margin-left: 16px;
+    margin-right: 16px;
+    align-content: center;
   }
 }
