--- a/block/button.css
+++ b/block/button.css
@@ -1,21 +1,20 @@
 .button {
-  width: 248px;
-  height: 48px;
-  background: #0278fe;
+  background-color: #0278fe;
   border-radius: 4px;
-  color: #ffffff;
-  font-size: 18px;
-  line-height: 22px;
-  font-weight: 600;
-  border: none;
-  transition: 0.3s;
+  max-height: 48px;
+  box-sizing: border-box;
   text-decoration: none;
   display: flex;
   align-items: center;
   justify-content: center;
-  max-height: 48px;
+  text-align: center;
+  padding: 13px 20px;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 22px;
+  transition: background-color 0.25s ease-in-out;
+  color: #fff;
 }
-
 .button:hover {
   background-color: #0063d2;
 }
