--- a/block/header.css
+++ b/block/header.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   padding-bottom: 0;
+  margin-top: 34px;
 }
 
 .header__logo {
@@ -12,8 +13,10 @@
 
 @media screen and (max-width: 320px) {
   .header__logo {
-    margin: 20px auto 0px;
     max-width: 200px;
     max-height: 51.85px;
+  }
+  .header {
+    margin-top: 20px;
   }
 }
