--- a/block/introduction.css
+++ b/block/introduction.css
@@ -39,13 +39,14 @@
   .introduction {
     margin: 88px auto 0;
     max-width: 720px;
+    font-weight: 900;
   }
 }
 
 @media screen and (max-width: 768px) {
   .introduction__title {
-    font-size: 32px;
-    line-height: 50px;
+    font-size: 54px;
+    line-height: 58px;
   }
   .introduction__content {
     margin-bottom: 90px;
