--- a/block/photo-grid.css
+++ b/block/photo-grid.css
@@ -2,25 +2,6 @@
   margin: 118px 48px 0px;
 }
 
-@media screen and (max-width: 320px) {
-  .photo-grid {
-    margin: 0px 16px 0 16px;
-    padding-top: 0px;
-  }
-  .photo-grid__list {
-    gap: 12px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .photo-grid {
-    margin: 0 24px 88px 24px;
-  }
-  .photo-grid__list {
-    max-width: 720px;
-  }
-}
-
 .photo-grid__list {
   list-style: none;
   display: grid;
@@ -33,5 +14,32 @@
 .photo-grid__item {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+}
+
+@media screen and (max-width: 320px) {
+  .photo-grid {
+    margin: 0px 16px 62px 16px;
+    padding-top: 0px;
+    width: 280px;
+  }
+  .photo-grid__list {
+    width: 280px;
+    gap: 12px;
+  }
+  .photo-grid__item {
+    height: 216px;
+  }
+
+  .photo-grid__list-item {
+    max-height: 216px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .photo-grid {
+    margin: 0 24px 88px 24px;
+  }
+  .photo-grid__list {
+    max-width: 720px;
+  }
 }
