--- a/block/cover.css
+++ b/block/cover.css
@@ -1,5 +1,5 @@
 .cover {
-  background-image: url("/images/background.png");
+  background-image: url("/images/background.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
