--- a/block/cover.css
+++ b/block/cover.css
@@ -1,5 +1,5 @@
 .cover {
-  background-image: url("../images/B8.jpg");
+  background-image: url("../images/covverbackground.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
