--- a/block/introduction.css
+++ b/block/introduction.css
@@ -1,6 +1,6 @@
 .introduction {
   max-width: 785px;
-  margin: 92px 124px 0;
+  margin: 92px 124px 118px;
 }
 
 .introduction__title {
@@ -35,7 +35,7 @@
   line-height: 1.62;
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1000px) {
   .introduction {
     margin: 88px auto 0;
     max-width: 720px;
