--- a/block/photo-grid.css
+++ b/block/photo-grid.css
@@ -1,5 +1,8 @@
 .photo-grid {
-  margin: 118px 48px 0px;
+  max-width: 1184px;
+  height: 100%;
+  margin: 0px 48px 92px 48px;
+  padding: 0px;
 }
 
 .photo-grid__list {
@@ -13,33 +16,29 @@
 
 .photo-grid__item {
   width: 100%;
-  height: 100%;
+  height:100%;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 1000px) {
   .photo-grid {
-    margin: 0px 16px 62px 16px;
-    padding-top: 0px;
-    width: 280px;
+    margin: 0px 24px 88px 24px;
   }
   .photo-grid__list {
-    width: 280px;
+    grid-template-columns: auto auto;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .photo-grid {
+    padding: 0px;
+    margin: 0px 16px;
+  }
+  .photo-grid__list {
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
     gap: 12px;
   }
   .photo-grid__item {
-    height: 216px;
-  }
-
-  .photo-grid__list-item {
-    max-height: 216px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .photo-grid {
-    margin: 0 24px 88px 24px;
-  }
-  .photo-grid__list {
-    max-width: 720px;
+    width: 100%;
+    margin: 0px;
   }
 }
